# fr

./: Dockerfile  default.conf  pyproject.toml
LB/: default.conf
src/api/: knn.py  lr.py  main.py
src/fr/: cli.py
src/note/: LinearRegression.ipynb  fish.ipynb
