[project]
name = "fr"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = [
    "numpy>=2.1.1",
    "scikit-learn>=1.5.1",
    "matplotlib>=3.9.2",
    "fastapi[standard]>=0.114.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]

[project.scripts]
fish = 'fr.cli:predict'
